--- a/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/angular.json
+++ b/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "a781ad37-ec92-40a9-b26d-e9834310ebde"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -27,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
